--- a/app/views/cuidadores.html
+++ b/app/views/cuidadores.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Info Cuidadores</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Info Cuidadores{% endblock %}
+
+{% block content %}
     <div class="container">
         <h1>Información de los cuidadores</h1>
         <p class="contador">Actualmente hay <strong>{{contador_cuidadores}}</strong> cuidadores.</p>
@@ -15,11 +11,4 @@
             {{ cuidadores_info | safe }}
         </div>
     </div>
-    <button id="modo-nocturno-btn" onclick="toggleModoNocturno()">Modo Nocturno</button>
-    <script>
-        function toggleModoNocturno() {
-            document.body.classList.toggle('noche');
-        }
-    </script>
-</body>
-</html>
+{% endblock %}
