--- a/app/views/perros.html
+++ b/app/views/perros.html
@@ -1,25 +1,14 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Info Perros</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Info Perros{% endblock %}
+
+{% block content %}
     <div class="container">
-        <h1>Información de los perrros</h1>
-        <p class="contador">Actualmente hay <strong>{{contador_perros}}</strong> perros.</p>
+        <h1>Información de los perros</h1>
+        <p class="contador">Actualmente hay <strong>{{ contador_perros }}</strong> perros.</p>
         <a href="/"><button id="volver" class="btn">Volver</button></a>
         <div class="perros-info">
             {{ perros_info | safe }}
         </div>
     </div>
-    <button id="modo-nocturno-btn" onclick="toggleModoNocturno()">Modo Nocturno</button>
-    <script>
-        function toggleModoNocturno() {
-            document.body.classList.toggle('noche');
-        }
-    </script>
-</body>
-</html>
+{% endblock %}
